@@ -1,3 +1,9 @@
+2008-11-04  Darin Adler  <darin@apple.com>
+
+        Reviewed by Tim Hatcher.
+
+        * wtf/ThreadingNone.cpp: Tweak formatting.
+
 2008-11-03  Darin Adler  <darin@apple.com>
 
         Reviewed by Tim Hatcher.
